--- a/.github/workflows/deployToLinode.yml
+++ b/.github/workflows/deployToLinode.yml
@@ -42,6 +42,10 @@ jobs:
           echo "⏹️ Stopping Discord bot service..."
           sudo systemctl stop discord-bot || echo "⚠️ Service was not running"
           
+          # Fix ownership issues first
+          echo "🔧 Fixing file ownership..."
+          sudo chown -R discord-bot:discord-bot /opt/discord-bot
+          
           # Handle git repository setup
           echo "📥 Setting up repository..."
           if [ ! -d ".git" ]; then
@@ -52,8 +56,9 @@ jobs:
             git config --global --add safe.directory /opt/discord-bot
           else
             echo "📦 Updating existing repository..."
-            # Fix git ownership issues
+            # Fix git ownership and permissions
             git config --global --add safe.directory /opt/discord-bot
+            git clean -fdx  # Remove untracked files and directories
             git fetch origin main
             git reset --hard origin/main
           fi
