--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,24 @@
+# Discord Self Bot - Environment Configuration
+# Copy this file to .env and fill in your values
+
 # Discord Bot Configuration
-# Copy this file to .env and fill in your actual values
-
-# Your Discord token (get from Discord Developer Portal or browser dev tools)
 DISCORD_TOKEN=your_discord_token_here
-
-# Command prefix for the bot
+OWNER_ID=your_discord_user_id_here
 PREFIX=!
 
-# Additional settings (optional)
-# OWNER_ID=your_discord_user_id
+# Bot Behavior Settings
+AUTO_REPLY=False
+LOG_MESSAGES=True
+DELETE_AFTER_REPLY=False
+
+# Message Monitoring Settings
+MONITORING_ENABLED=True
+MONITORING_SERVER_ID=your_server_id_here
+MONITORING_CHANNEL_IDS=  # Leave empty to monitor all channels, or comma-separated list
+LOG_FILE=./logs/messages.txt
+INCLUDE_ATTACHMENTS=True
+INCLUDE_EMBEDS=True
+
+# Development Settings (optional)
+DEBUG=False
+LOG_LEVEL=INFO
