Remove Discord Self Bot scripts and core functionality
- Deleted start_bot.sh and start_bot_simple.sh scripts for bot execution.
- Removed core bot classes and command modules, including DiscordSelfBot, CommandRegistry, and various command implementations (Ping, Info, Help, Purge, Clean, Monitor, Logs).
- Eliminated configuration and logging modules, including config.py and logger.py.
- Cleaned up utility scripts and legacy logger compatibility files.
- Ensured complete removal of all related files and directories for a fresh start.

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,18 @@
-# Discord Self Bot - Environment Configuration
-# Copy this file to .env and fill in your values
+# Discord Message Listener Configuration
+# =====================================
 
-# Discord Bot Configuration
+# Token de tu cuenta de Discord (NO el ID de usuario, sino el token real)
+# Para obtener tu token, revisa las instrucciones en el README
 DISCORD_TOKEN=your_discord_token_here
-OWNER_ID=your_discord_user_id_here
-PREFIX=!
 
-# Bot Behavior Settings
-AUTO_REPLY=False
-LOG_MESSAGES=True
-DELETE_AFTER_REPLY=False
-
-# Message Monitoring Settings
-MONITORING_ENABLED=True
+# ID del servidor que quieres monitorear
+# Para obtener el ID: Configuración del servidor > Copiar ID (requiere modo desarrollador)
 MONITORING_SERVER_ID=your_server_id_here
-MONITORING_CHANNEL_IDS=  # Leave empty to monitor all channels, or comma-separated list
-LOG_FILE=./logs/messages.txt
-INCLUDE_ATTACHMENTS=True
-INCLUDE_EMBEDS=True
 
-# Development Settings (optional)
-DEBUG=False
-LOG_LEVEL=INFO
+# IDs de canales específicos a monitorear (opcional, separados por comas)
+# Si está vacío, monitoreará TODOS los canales del servidor
+# Ejemplo: MONITORING_CHANNEL_IDS=123456789,987654321
+MONITORING_CHANNEL_IDS=
+
+# Archivo donde guardar los mensajes
+LOG_FILE=./logs/messages.txt
