--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,15 @@
-# Dependencies
-node_modules/
-<<<<<<< HEAD
-.env
-=======
-venv/
-discord_selfbotting/
-
 # Environment variables (contains secrets)
 .env
 
+# Virtual environment
+venv/
+env/
+
 # Log files
->>>>>>> 4b605d4 (Refactor environment configuration and deployment scripts)
 *.log
 logs/
 
-# OS files
-.DS_Store
-Thumbs.db
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# Python
+# Python cache
 __pycache__/
 *.py[cod]
 *$py.class
@@ -45,3 +30,16 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Node modules (if any)
+node_modules/
