Adds Notion integration for message logging
Integrates Notion API to log Discord messages directly into a database, enhancing functionality with real-time storage and backup support. Updates `.env.example` and deployment scripts to include Notion credentials. Adds validation for Notion configuration and error handling for seamless message saving. Updates documentation to reflect new setup and requirements.

Adds Notion integration for message logging

Integrates Notion API to log Discord messages directly into a database, providing real-time storage and backup support. Updates environment configuration and deployment scripts to include Notion credentials. Adds validation for Notion setup, error handling, and fallback mechanisms. Enhances documentation to reflect new functionality and setup requirements.

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,31 @@ MONITORING_SERVER_ID=your_server_id_here
 # Ejemplo: MONITORING_CHANNEL_IDS=123456789,987654321
 MONITORING_CHANNEL_IDS=
 
-# Archivo donde guardar los mensajes
+# Archivo de log (backup cuando Notion no está disponible)
 LOG_FILE=./logs/messages.txt
+
+# ======================
+# NOTION INTEGRATION
+# ======================
+
+# Token privado de Notion:
+# 1. Ve a https://www.notion.so/my-integrations
+# 2. Crea una nueva integración
+# 3. Copia el "Internal Integration Token"
+NOTION_TOKEN=your_notion_token_here
+
+# ID de la base de datos de Notion donde se guardarán los mensajes
+# 1. Comparte tu base de datos con la integración (botón "Share" > "Invite" > busca tu integración)
+# 2. Copia el ID desde la URL: https://notion.so/[workspace]/[database_id]?v=...
+# El database_id es la parte entre las barras después del workspace y antes del "?v="
+NOTION_DATABASE_ID=your_notion_database_id_here
+
+# Asegúrate de que tu base de datos de Notion tenga las siguientes propiedades:
+# - Autor (Title)
+# - Fecha (Date)  
+# - Servidor (Select)
+# - Canal (Select)
+# - Contenido (Text)
+# - URL adjunta (URL)
+# - Archivo Adjunto (Text)
+# - URL del mensaje (URL)
