Adds heartbeat monitoring and bot auto-restart system
Integrates a heartbeat monitoring system using Healthchecks.io for enhanced bot reliability. Adds support for auto-restarting the bot if it becomes unresponsive. Updates documentation, environment variables, and scripts to reflect these features. Removes outdated files related to the old bot architecture to streamline the project.

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,25 @@ NOTION_DATABASE_ID=your_notion_database_id_here
 # - URL adjunta (URL)
 # - Archivo Adjunto (Text)
 # - URL del mensaje (URL)
+
+# ======================
+# SISTEMA DE HEARTBEATS
+# ======================
+
+# URL de ping de Healthchecks.io para monitoreo del bot
+# 1. Crea una cuenta en https://healthchecks.io
+# 2. Crea un nuevo check
+# 3. Copia la URL de ping
+HEALTHCHECKS_PING_URL=https://hc-ping.com/f679a27c-8a41-4ae2-9504-78f1b260e71d
+
+# Intervalo de heartbeats en segundos (default: 300 = 5 minutos)
+HEARTBEAT_INTERVAL=300
+
+# Intervalo de monitoreo del bot en segundos (default: 120 = 2 minutos)
+MONITOR_INTERVAL=120
+
+# Nombre del proceso del bot para monitoreo
+BOT_PROCESS_NAME=simple_message_listener.py
+
+# Auto-reiniciar el bot si se detecta que no está funcionando (true/false)
+AUTO_RESTART_BOT=true
