--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 git+https://github.com/dolfies/discord.py-self.git
 python-dotenv==1.0.0
 notion-client==2.2.1
+requests==2.31.0
+aiohttp==3.9.5
+psutil==5.9.6
