--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,70 +1,41 @@
-name: Test Discord Bot (Development)
+name: Test Notion Integration on Develop
 
 on:
   push:
     branches:
       - develop
-      - 'feature/**'
-  pull_request:
-    branches:
-      - main
-      - develop
 
 jobs:
-  test:
+  test-integration:
     runs-on: ubuntu-latest
     
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
 
-    - name: Set up Python
+    - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
 
-    - name: Create virtual environment
+    - name: Install Dependencies
       run: |
         python -m venv venv
         source venv/bin/activate
-
-    - name: Install dependencies
-      run: |
-        source venv/bin/activate
         pip install --upgrade pip
         pip install -r requirements.txt
+        # Instalar dependencias de desarrollo para pruebas
+        pip install pytest pytest-mock pytest-asyncio python-dotenv
 
-    - name: Validate configuration
+    - name: Run Notion Integration Tests
+      # Este paso ejecuta el archivo de test específico
       run: |
         source venv/bin/activate
-        # Test that simple_message_listener.py can be imported without errors
-        python -c "
-        import sys
-        import os
-        # Mock environment variables for testing
-        os.environ['DISCORD_TOKEN'] = 'test_token_for_import_test'
-        os.environ['MONITORING_SERVER_ID'] = '123456789'
-        
-        try:
-            # Test imports without actually running the bot
-            import simple_message_listener
-            print('✅ Simple message listener module loads successfully')
-            
-            # Test that the class can be instantiated
-            listener = simple_message_listener.SimpleMessageListener()
-            print('✅ SimpleMessageListener class instantiation works')
-            
-            # Test basic validation
-            assert listener.token == 'test_token_for_import_test', 'Token not loaded correctly'
-            assert listener.target_server_id == '123456789', 'Server ID not loaded correctly'
-            print('✅ Configuration validation passed')
-            
-        except Exception as e:
-            print(f'❌ Validation failed: {e}')
-            sys.exit(1)
-        "
-
-    - name: Check code style (optional)
-      run: |
-        echo "🔍 Basic code checks passed"
-        echo "✅ All tests completed successfully"
+        pytest test/test_notion_integration.py
+      env:
+        # Pasa los secretos de GitHub como variables de entorno al test
+        # DEBES CONFIGURAR ESTOS SECRETOS EN TU REPOSITORIO DE GITHUB
+        NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+        NOTION_DATABASE_ID: ${{ vars.NOTION_DATABASE_ID }}
+        DISCORD_TOKEN: "fake_token" # No se usa en el test, pero evita errores de carga
+        MONITORING_SERVER_ID: "123456789" # No se usa en el test, pero evita errores de carga
