Add Google Drive integration and enhance Notion file uploads
Introduces Google Drive integration for file uploads, allowing backups of Discord attachments with shareable links. Adds configuration options for enabling Google Drive, specifying credentials, and setting a target folder.

Enhances Notion integration by implementing the official 3-step file upload API for direct file uploads. Includes robust rate-limiting and retry mechanisms for both Google Drive and Notion operations. Improves logging, message processing, and temporary file management.

Updates dependencies to include required Google Drive libraries and updates `.gitignore` for sensitive files.

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,28 @@ MONITORING_SERVER_ID=your_server_id_here
 MONITORING_CHANNEL_IDS=
 
 # Archivo de log (backup cuando Notion no está disponible)
-LOG_FILE=./logs/messages.txt
+LOG_FILE=./logs/messages.json
+
+# ======================
+# GOOGLE DRIVE CONFIGURATION (Optional)
+# ======================
+
+# Habilitar subida de archivos a Google Drive
+# Si está habilitado, los archivos se subirán a Google Drive en lugar de solo referenciar las URLs de Discord
+GOOGLE_DRIVE_ENABLED=true
+
+# Ruta al archivo de credenciales de Google Drive OAuth2
+# Descargar desde Google Cloud Console > APIs & Services > Credentials
+GOOGLE_DRIVE_CREDENTIALS=credentials.json
+
+# Archivo donde se guardará el token de acceso (se genera automáticamente)
+GOOGLE_DRIVE_TOKEN=token.json
+
+# ID específico de carpeta de Google Drive donde subir archivos (opcional)
+# Si no se especifica, creará una carpeta "Discord Attachments" en tu drive personal
+# Puede ser una carpeta en drives compartidos contigo
+# Ejemplo: GOOGLE_DRIVE_FOLDER_ID=1BxiMVs0XRA5nFMdKvBdBZjgmUUqptlbs74OgvE2upms
+GOOGLE_DRIVE_FOLDER_ID=
 
 # ======================
 # NOTION INTEGRATION
