--- a/.env.example
+++ b/.env.example
@@ -1,87 +1,40 @@
 # Discord Message Listener Configuration
 # =====================================
 
-# Token de tu cuenta de Discord (NO el ID de usuario, sino el token real)
-# Para obtener tu token, revisa las instrucciones en el README
+# Discord Configuration
 DISCORD_TOKEN=your_discord_token_here
-
-# ID del servidor que quieres monitorear
-# Para obtener el ID: Configuración del servidor > Copiar ID (requiere modo desarrollador)
 MONITORING_SERVER_ID=your_server_id_here
-
-# IDs de canales específicos a monitorear (opcional, separados por comas)
-# Si está vacío, monitoreará TODOS los canales del servidor
-# Ejemplo: MONITORING_CHANNEL_IDS=123456789,987654321
 MONITORING_CHANNEL_IDS=
-
-# Archivo de log (backup cuando Notion no está disponible)
 LOG_FILE=./logs/messages.json
-
-# ======================
-# GOOGLE DRIVE CONFIGURATION (Optional)
-# ======================
-
-# Habilitar subida de archivos a Google Drive
-# Si está habilitado, los archivos se subirán a Google Drive en lugar de solo referenciar las URLs de Discord
-GOOGLE_DRIVE_ENABLED=true
-
-# Ruta al archivo de credenciales de Google Drive OAuth2
-# Descargar desde Google Cloud Console > APIs & Services > Credentials
-GOOGLE_DRIVE_CREDENTIALS=credentials.json
-
-# Archivo donde se guardará el token de acceso (se genera automáticamente)
-GOOGLE_DRIVE_TOKEN=token.json
-
-# ID específico de carpeta de Google Drive donde subir archivos (opcional)
-# Si no se especifica, creará una carpeta "Discord Attachments" en tu drive personal
-# Puede ser una carpeta en drives compartidos contigo
-# Ejemplo: GOOGLE_DRIVE_FOLDER_ID=1BxiMVs0XRA5nFMdKvBdBZjgmUUqptlbs74OgvE2upms
-GOOGLE_DRIVE_FOLDER_ID=
 
 # ======================
 # NOTION INTEGRATION
 # ======================
 
-# Token privado de Notion:
-# 1. Ve a https://www.notion.so/my-integrations
-# 2. Crea una nueva integración
-# 3. Copia el "Internal Integration Token"
 NOTION_TOKEN=your_notion_token_here
-
-# ID de la base de datos de Notion donde se guardarán los mensajes
-# 1. Comparte tu base de datos con la integración (botón "Share" > "Invite" > busca tu integración)
-# 2. Copia el ID desde la URL: https://notion.so/[workspace]/[database_id]?v=...
-# El database_id es la parte entre las barras después del workspace y antes del "?v="
 NOTION_DATABASE_ID=your_notion_database_id_here
 
-# Asegúrate de que tu base de datos de Notion tenga las siguientes propiedades:
-# - Autor (Title)
-# - Fecha (Date)  
-# - Servidor (Select)
-# - Canal (Select)
-# - Contenido (Text)
-# - URL adjunta (URL)
-# - Archivo Adjunto (Text)
-# - URL del mensaje (URL)
-
 # ======================
-# SISTEMA DE HEARTBEATS
+# HEARTBEAT MONITORING
 # ======================
 
-# URL de ping de Healthchecks.io para monitoreo del bot
-# 1. Crea una cuenta en https://healthchecks.io
-# 2. Crea un nuevo check
-# 3. Copia la URL de ping
-HEALTHCHECKS_PING_URL=https://hc-ping.com/f679a27c-8a41-4ae2-9504-78f1b260e71d
-
-# Intervalo de heartbeats en segundos (default: 300 = 5 minutos)
+HEALTHCHECKS_PING_URL=https://hc-ping.com/your-unique-uuid-here
 HEARTBEAT_INTERVAL=300
-
-# Intervalo de monitoreo del bot en segundos (default: 120 = 2 minutos)
 MONITOR_INTERVAL=120
-
-# Nombre del proceso del bot para monitoreo
 BOT_PROCESS_NAME=simple_message_listener.py
-
-# Auto-reiniciar el bot si se detecta que no está funcionando (true/false)
 AUTO_RESTART_BOT=true
+
+# ======================
+# GOOGLE DRIVE (SERVICE ACCOUNT - RECOMMENDED)
+# ======================
+
+GOOGLE_DRIVE_ENABLED=true
+GOOGLE_SERVICE_ACCOUNT_FILE=service_account.json
+GOOGLE_DRIVE_FOLDER_ID=1_35WwTLrvzDQMwN_roZbIL0Wsfd6Blre
+
+# ======================
+# GOOGLE DRIVE (OAUTH2 - LEGACY)
+# ======================
+# Use only if Service Account is not available
+# GOOGLE_DRIVE_CREDENTIALS=credentials.json
+# GOOGLE_DRIVE_TOKEN=token.json
